[gd_scene load_steps=30 format=3 uid="uid://di6wb10q555r8"]

[ext_resource type="Script" uid="uid://baodwuqwhx3kd" path="res://scenes/UI/level_select_card.gd" id="1_lqqrh"]
[ext_resource type="AudioStream" uid="uid://ch3i4ef4byuyn" path="res://assets/audio/saltselectsfx.wav" id="2_ug6rv"]
[ext_resource type="PackedScene" uid="uid://dv54y4v25i82x" path="res://scenes/component/random_stream_player_component.tscn" id="2_w130t"]
[ext_resource type="AudioStream" uid="uid://cqmtle8yjoapg" path="res://assets/audio/sfx/switch1.ogg" id="3_k2vml"]
[ext_resource type="AudioStream" uid="uid://b0ot7rrp0rh3o" path="res://assets/audio/sfx/switch2.ogg" id="4_lojl1"]
[ext_resource type="AudioStream" uid="uid://dxipoqs3b7mv6" path="res://assets/audio/sfx/switch3.ogg" id="5_lpv2m"]
[ext_resource type="AudioStream" uid="uid://8n2tlc1rifta" path="res://assets/audio/sfx/switch4.ogg" id="6_71mn3"]
[ext_resource type="AudioStream" uid="uid://dggagepu1ie2" path="res://assets/audio/sfx/switch5.ogg" id="7_fam7i"]
[ext_resource type="AudioStream" uid="uid://bfaaaodkr6x3f" path="res://assets/audio/sfx/switch6.ogg" id="8_awk0o"]
[ext_resource type="AudioStream" uid="uid://c66avioa74kix" path="res://assets/audio/sfx/switch7.ogg" id="9_71d24"]
[ext_resource type="AudioStream" uid="uid://lwxy13lw45h7" path="res://assets/audio/sfx/switch8.ogg" id="10_s5uvp"]
[ext_resource type="AudioStream" uid="uid://bwj1ga8wv756h" path="res://assets/audio/sfx/switch9.ogg" id="11_osiln"]
[ext_resource type="AudioStream" uid="uid://dk60ddh103bwg" path="res://assets/audio/sfx/switch10.ogg" id="12_y6qdc"]
[ext_resource type="Theme" uid="uid://ivx8wu3sxxyt" path="res://resources/theme/theme.tres" id="13_gkfet"]
[ext_resource type="PackedScene" uid="uid://cdnhsly5xea23" path="res://scenes/component/salt_select_effect.tscn" id="14_dqi2l"]
[ext_resource type="Script" uid="uid://4jj5k666qvto" path="res://scenes/UI/focus_button.gd" id="16_aaf3g"]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_7k7l3"]
random_pitch = 1.4
streams_count = 1
stream_0/stream = ExtResource("2_ug6rv")

[sub_resource type="Animation" id="Animation_wsajo"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MarginContainer/VBoxContainer/PanelContainer/PreviewImage:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_kqy3a"]
resource_name = "char_look"
length = 1.5
loop_mode = 1
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer/VBoxContainer/PanelContainer/PreviewImage:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.533333, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}

[sub_resource type="Animation" id="Animation_e8s16"]
resource_name = "discard"
length = 0.1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_hu6jh"]
resource_name = "in"
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1.2, 1.3), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_cxtt2"]
resource_name = "selected"
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.4),
"transitions": PackedFloat32Array(1, 2.14355, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.2, 1.2), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.174533, 0.0872665, 0.0]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ClickPlayerComponent")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.05),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"play_random"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_macc1"]
_data = {
&"RESET": SubResource("Animation_wsajo"),
&"char_look": SubResource("Animation_kqy3a"),
&"discard": SubResource("Animation_e8s16"),
&"in": SubResource("Animation_hu6jh"),
&"selected": SubResource("Animation_cxtt2")
}

[sub_resource type="Animation" id="Animation_c3pub"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HoverPlayerComponent:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_uqdi6"]
resource_name = "discard"
length = 0.1
step = 0.05

[sub_resource type="Animation" id="Animation_l3fqj"]
resource_name = "hover"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.0872665, 0.0872665, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HoverPlayerComponent:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SaltSelectEffect:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_rtxib"]
resource_name = "selected"
length = 0.4

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xwlku"]
_data = {
&"RESET": SubResource("Animation_c3pub"),
&"discard": SubResource("Animation_uqdi6"),
&"hover": SubResource("Animation_l3fqj"),
&"selected": SubResource("Animation_rtxib")
}

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_b8pkh"]
load_path = "res://.godot/imported/romford.png-de146e669c6162ccc45aa80a0a935717.ctex"

[node name="LevelSelectCard" type="PanelContainer" groups=["char_card"]]
self_modulate = Color(0, 0, 0, 1)
custom_minimum_size = Vector2(225, 250)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1121.0
offset_top = -125.0
offset_right = -871.0
offset_bottom = 125.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(75, 75)
script = ExtResource("1_lqqrh")

[node name="HoverPlayerComponent" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_7k7l3")
volume_db = -17.0
pitch_scale = 1.2
bus = &"sfx"

[node name="ClickPlayerComponent" parent="." instance=ExtResource("2_w130t")]
streams = Array[AudioStream]([ExtResource("3_k2vml"), ExtResource("4_lojl1"), ExtResource("5_lpv2m"), ExtResource("6_71mn3"), ExtResource("7_fam7i"), ExtResource("8_awk0o"), ExtResource("9_71d24"), ExtResource("10_s5uvp"), ExtResource("11_osiln"), ExtResource("12_y6qdc")])

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_macc1")
}

[node name="HoverAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_xwlku")
}

[node name="SaltSelectEffect" parent="." instance=ExtResource("14_dqi2l")]
position = Vector2(129, 0)

[node name="MarginContainer" type="MarginContainer" parent="."]
clip_contents = true
layout_mode = 2
mouse_filter = 2
theme = ExtResource("13_gkfet")
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 4
mouse_filter = 2
theme_override_constants/separation = 10

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
mouse_filter = 2
theme_type_variation = &"AlternatePanelContainer"

[node name="PreviewImage" type="Sprite2D" parent="MarginContainer/VBoxContainer/PanelContainer"]
unique_name_in_owner = true
position = Vector2(78, 45)
scale = Vector2(0.6, 0.6)
texture = SubResource("CompressedTexture2D_b8pkh")

[node name="NameLabel" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 0
theme_type_variation = &"BlueOutlineLabel"
theme_override_font_sizes/font_size = 32
text = "Level"

[node name="DescriptionLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
size_flags_vertical = 10
theme_type_variation = &"BlueOutlineLabel"
theme_override_colors/font_shadow_color = Color(0.247059, 0.14902, 0.192157, 1)
theme_override_font_sizes/font_size = 16
text = "1 line
2line
"
horizontal_alignment = 1
vertical_alignment = 2
autowrap_mode = 2

[node name="DisabledOverlay" type="ColorRect" parent="MarginContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
color = Color(0.486275, 0.486275, 0.486275, 0.882353)

[node name="FocusButton" type="Button" parent="."]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0.576471)
layout_mode = 2
theme = ExtResource("13_gkfet")
script = ExtResource("16_aaf3g")
